tests/tests/CompileError/5_FuncUsedNotDeclared.c
int main(){
    int a = 2;
    int b = 3;
    add(a, b);
    return 0;
}

int add(int a, int b);